MAINT: Fix web app